--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday Trần Thanh Huyền">
 	<meta name="robots" content="index, follow" />
-	<link rel="author" href="https://stargateedge.com" /> 
+	<link rel="author" href="https://tranthanhhuyen" /> 
     <meta name="keywords" content="Birthday, Happy">
     <!-- Strat of Facebook Meta -->
     <meta property="og:type" content="E-Greeting" />
@@ -49,12 +49,6 @@
     </div>
 	<div class="balloons text-center" id="b5">
     	<h2 style="color:#8377E4;">N</h2>
-    </div>
-    <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">B</h2>
-    </div>
-    <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">X</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
