--- a/index.html
+++ b/index.html
@@ -35,20 +35,15 @@
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
-    <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">H</h2>
-    </div>
-    <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">U</h2>
-    </div>
+ 
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">Y</h2>
+    	<h2 style="color:#D14D39;">Trần</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">E</h2>
+    	<h2 style="color:#8FAD00;">Thanh</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">N</h2>
+    	<h2 style="color:#8377E4;">Huyền</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
