--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday Trần Thanh Huyền">
 	<meta name="robots" content="index, follow" />
-	<link rel="author" href="https://tranthanhhuyen" /> 
+	<link rel="author" href="https://tranthanhhuyen.com" /> 
     <meta name="keywords" content="Birthday, Happy">
     <!-- Strat of Facebook Meta -->
     <meta property="og:type" content="E-Greeting" />
@@ -37,7 +37,7 @@
     </audio>
  
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">Trần</h2>
+    	<h2 style="color:#20CFB4;">Trần</h2>
     </div>
 	<div class="balloons text-center" id="b4">
     	<h2 style="color:#8FAD00;">Thanh</h2>
@@ -105,33 +105,14 @@
 				<p>Do you know..?</p>
 				<p>today is just special</p>
 				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
 				<p>the best celebration ever</p>
-				<p>and let me share...</p>
 				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>I wish you all the best</p>
 				<p>May your life be at ease</p>
 				<p>May all your wishes come true</p>
 				<p>Remember</p>
 				<p>your ambitions</p>
 				<p>you live as a free bird...</p>
 				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
 				<p>happiness along the way</p>
 				<p>keep your spirit up</p>
 				<p>enjoy every single moment...</p>
@@ -139,8 +120,7 @@
 				<p>fill it with your most beautiful smile</p>
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Trần Thanh Huyền</p>
+				<p>happy birthday Trần Thanh Huyền</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
